# hw9_scrapy

./: README.md  authors.json  connect.py  main.py  models.py  pyproject.toml  quotes.json  scrape_quotes.py
quotes_spider/quotes_spider/: settings.py
quotes_spider/quotes_spider/spiders/: authors.py
