[tool.poetry]
name = "hw9-scrapy"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Aleksandr <aleksandr.voitushenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
python-dotenv = "^1.0.1"
mongoengine = "^0.28.2"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
